Flesh and Bones

--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -82,6 +82,9 @@
 <div class="mySlides" style="text-align: center;"><img src="DC63.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC64.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DC68.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -188,6 +191,7 @@ Previous Titles
 <li><a href="../AllStar/AllStar.html">All Star</a> (1940) 	 	
 <li><a href="../AllStar/AllStar.html">All Star Superman</a> (2006) 	 	
 <li><a href="../AngelAndTheApe/AngelAndTheApe.html">Angel And The Ape</a> (1968) 	
+<li><a href="DC68.jpg">Angel Love</a> (1986) 	
 <li><a href="../Aquaman/Aquaman.html">Aquaman</a> (1962) 	 	
 <li><a href="../AstroCity/AstroCity.html">Astro City</a> (1999) 	 	
 <li><a href="../Atom/Atom.html">Atom</a> (1962) 	 	
