--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -273,6 +273,7 @@ Titles
 <li><a href="Fantagraphics71.jpg">Eye of Mongombo</a> (1989)
 <li><a href="Fantagraphics72.jpg">Feiffer: The Collected Works</a> (1988)
 <li><a href="Fantagraphics73.jpg">Fission Chicken</a> (1990)
+<li><a href="../Dalgoda/Dalgoda.html">Flesh &amp; Bones</a> (1986)
 <li><a href="Fantagraphics74.jpg">Frank</a> (1994)
 <li><a href="Fantagraphics75.jpg">Frederick and Eloise: A Love Story</a> (1993)
 <li><a href="Fantagraphics76.jpg">Ganges</a> (2006)
