--- a/Dalgoda/Dalgoda.html
+++ b/Dalgoda/Dalgoda.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-<img src="Dalgoda01.jpg"> <br>
-Writer: Jan Strnad<br>
-Illustrator: Dennis Fujitake<br>
-8 issues 1984-1986 by Fantagraphics
+<img src="Dalgoda01.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -34,10 +31,14 @@ Illustrator: Dennis Fujitake<br>
 <div class="mySlides" style="text-align: center;"><img src="FleshAndBones3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FleshAndBones4.jpg"></div>
 
-
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+Writer: Jan Strnad<br>
+Illustrator: Dennis Fujitake<br>
+8 issues 1984-1986 by <a href="../Fantagraphics/Fantagraphics.html">Fantagraphics</a>
+<p>
 </p><p>
 Some people think the whole universe is going to the dogs, and they could be right. The inhabitants of Canida are intelligent humanoids who also happen to be…dogs. Dalgoda is the latest, and reluctant, emissary between the Canidans and Earth in a last-ditch effort to ease the tensions that have grown between the two worlds.
 </p><p>
