--- a/index.html
+++ b/index.html
@@ -5981,7 +5981,7 @@
 <td>Angel Love</td>
 <td>1986</td>
 <td>DC</td>
-<td><a href="DC/DC.html">Details</a></td>
+<td><a href="DCComics/DCComics.html">Details</a></td>
 </tr>
 
 <tr>
