--- a/HarperCollins/HarperCollins.html
+++ b/HarperCollins/HarperCollins.html
@@ -170,7 +170,6 @@ Titles
 <li><a href="../LyndaBarry/LyndaBarry29.jpg">My Perfect Life</a> 	1992
 <li><a href="HarperCollins54.jpg">New Kid</a>  	2019
 <li><a href="HarperCollins56.jpg">New Yorker 25th Anniversary Album</a>  	1977
-<li><a href="HarperCollins57.jpg">New Yorker Twenty-Fifth Anniversary Album 1925-1950</a>  	1986
 <li><a href="HarperCollins58.jpg">Nimona</a>  	2015
 <li><a href="HarperCollins59.jpg">P.O.D. The Nexus</a> 2008
 <li><a href="HarperCollins60.jpg">Peanuts: A Golden Celebration</a>  	1999
@@ -197,7 +196,7 @@ Titles
 <li><a href="HarperCollins81.jpg">Wasteland</a> 	1990
 <li><a href="HarperCollins82.jpg">Way Beyond Therapy</a>  	1996
 <li><a href="HarperCollins83.jpg">World Is Filled with Mondays</a> 	1999
-<li><a href="HarperCollins84.jpg">The World of George Price</a> 	1989
+<li><a href="HarperCollins84.jpg">World of George Price</a> 	1989
 <li><a href="HarperCollins85.jpg">Zot!</a>  	2008
 
 </p>
