--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -213,6 +213,7 @@ Previous Titles
 <li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1938)
 <li><a href="../BoyCommandos/BoyCommandos.html">Boy Commandos</a> (1942)
 <li><a href="../BraveAndTheBold/BraveAndTheBold.html">Brave And The Bold</a> (1955)
+<li><a href="../GlennBarr/GlennBarr9.jpg">Brooklyn Dreams</a> (1995)
 <li><a href="../Camelot3000/Camelot3000.html">Camelot 3000</a> (1985)
 <li><a href="../CatWoman/CatWoman.html">Catwoman</a> (1972)	
 <li><a href="../CaveCarson/CaveCarson.html">Cave Carson</a> (2016)
