--- a/index.html
+++ b/index.html
@@ -36829,6 +36829,13 @@
 </tr>
 
 <tr>
+<td>Glenn Barr</td>
+<td>1975</td>
+<td>Creator</td>
+<td><a href="GlennBarr/GlennBarr.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Glenn Bray</td>
 <td>1976</td>
 <td>Publisher</td>
