--- a/ChrisBachalo/ChrisBachalo.html
+++ b/ChrisBachalo/ChrisBachalo.html
@@ -24,6 +24,10 @@
 <div class="mySlides" style="text-align: center;"><img src="ChrisBachalo03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChrisBachalo04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChrisBachalo05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisBachalo06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisBachalo07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisBachalo08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisBachalo09.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
