Kill Six Billion Demons

--- a/Image/image.html
+++ b/Image/image.html
@@ -989,8 +989,9 @@ Titles
 <li><a href="image360.jpg">Kabuki</a> (1997)
 <li><a href="image361.jpg">Kid Supreme</a> (1996)
 <li><a href="image362.jpg">Kill All Parents</a> (2008)
-<li><a href="image363.jpg">Kill or Be Killed</a> (2016)
-<li><a href="image364.jpg">Kill the Minotaur</a> (2017)
+<li><a href="image363.jpg">Kill Or Be Killed</a> (2016)
+<li><a href="../KillSixBillionDemons/KillSixBillionDemons.html">Kill Six Billion Demons</a> (2016)
+<li><a href="image364.jpg">Kill The Minotaur</a> (2017)
 <li><a href="image365.jpg">Kin</a> (2000)
 <li><a href="image366.jpg">Kiss: Psycho Circus</a> (1998)
 <li><a href="image367.jpg">Knight Watchmen</a> (1998)
