--- a/index.html
+++ b/index.html
@@ -46571,6 +46571,13 @@
 </tr>
 
 <tr>
+<td>Kill Six Billion Demons</td>
+<td>2016</td>
+<td>Image</td>
+<td><a href="KillSixBillionDemons/KillSixBillionDemons.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kill The Minotaur</td>
 <td>2017</td>
 <td>Image</td>
@@ -60530,6 +60537,13 @@
 <td>2008</td>
 <td>Harper Collins</td>
 <td><a href="HarperCollins/HarperCollins.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pablo Amaringo</td>
+<td>1938</td>
+<td>Creator</td>
+<td><a href="PabloAmaringo/PabloAmaringo.html">Details</a></td>
 </tr>
 
 <tr>
