--- a/index.html
+++ b/index.html
@@ -4923,7 +4923,7 @@
 <tr>
 <td>Alter Ego</td>
 <td>1961</td>
-<td>TwoMorrows Publishing</td>
+<td>TwoMorrows</td>
 <td><a href="AlterEgo/AlterEgo.html">Details</a></td>
 </tr>
 
@@ -79075,6 +79075,13 @@
 <td>2011</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>TwoMorrows Publishing</td>
+<td>1994</td>
+<td>Publisher</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
