--- a/ArthurAdams/ArthurAdams.html
+++ b/ArthurAdams/ArthurAdams.html
@@ -27,6 +27,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ArthurAdams06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurAdams07.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ArthurAdams08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Longshot/Longshot.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
