--- a/Longshot/Longshot.html
+++ b/Longshot/Longshot.html
@@ -12,7 +12,7 @@ Longshot<br>
 Series: 6 issue mini-series 1985<br>
 Publisher: Marvel<br>
 Written by Ann Nocenti<br>
-Illustrations by Aurthur Adams,<br>
+Illustrations by <a href="../ArthurAdams/ArthurAdams.html">Aurthur Adams</a>
 <p>
 Running for his life, Longhsot leaps through a portal and arrives on earth with no memory of who he is or where he came from. As he tries to adjust to this strange new world, he is befriended by the dog looking creature, Magog, and the human survivalist nut, Eliot. Longshot and Eliot learn of a woman whose baby has been kidnapped and they decide to rescue her tot. They discover the band of creatures who chased Longshot from his world just as they are preparing to sacrifice the baby to open a portal home. Longshot uses his powers of incredible luck to rescue the baby and escape from Spiral.
 </p>
