--- a/index.html
+++ b/index.html
@@ -54333,6 +54333,13 @@
 </tr>
 
 <tr>
+<td>Michael Zulli</td>
+<td>1953</td>
+<td>Creator</td>
+<td><a href="MichaelZulli/MichaelZulli.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Michelangelo</td>
 <td>1475</td>
 <td>Creator</td>
