--- a/TwoMorrows/TwoMorrows.html
+++ b/TwoMorrows/TwoMorrows.html
@@ -79,7 +79,7 @@ Titles
 <li><a href="TwoMorrows23.jpg">Silver Star: Graphite Edition</a> (2006)
 <li><a href="TwoMorrows24.jpg">Streetwise</a> (2000)
 <li><a href="TwoMorrows25.jpg">Warren Companion</a> (2001)
-<li><a href="TwoMorrows26.jpg">World Of TWoMorrows</a> (2020)
+<li><a href="TwoMorrows26.jpg">World Of TwoMorrows</a> (2020)
 <li><a href="TwoMorrows27.jpg">Xal-Kor The Human Cat</a> (2002)
 </p>
 
