--- a/index.html
+++ b/index.html
@@ -3035,6 +3035,13 @@
 </tr>
 
 <tr>
+<td>Against The Grain: Mad Artist Wallace Wood</td>
+<td>2003</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Age Of Apocalypse</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -3466,6 +3473,13 @@
 <td>1903</td>
 <td>Creator</td>
 <td><a href="AlHirschfeld/AlHirschfeld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Al Plastino: Last Superman Standing</td>
+<td>2016</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4943,6 +4957,13 @@
 
 <tr>
 <td>Alter Ego</td>
+<td>1999</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alter Ego</td>
 <td>2011</td>
 <td>Heroic</td>
 <td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
@@ -5478,6 +5499,27 @@
 <td>2001</td>
 <td>Vertigo</td>
 <td><a href="AmericanCentury/AmericanCentury.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Comic Book Chronicles: 1950-50</td>
+<td>2013</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Comic Book Chronicles: 1965-69</td>
+<td>2014</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Comic Book Chronicles: 1970-79</td>
+<td>2014</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9138,6 +9180,13 @@
 <td>2004</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Back Issue!</td>
+<td>2003</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16945,6 +16994,13 @@
 </tr>
 
 <tr>
+<td>Captain Victory: Graphite Edition</td>
+<td>2003</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Video</td>
 <td>1951</td>
 <td>Fawcett</td>
@@ -20260,6 +20316,20 @@
 </tr>
 
 <tr>
+<td>Comic Book Artist</td>
+<td>1998</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Book Creator</td>
+<td>2013</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comic Book Digest</td>
 <td>2006</td>
 <td>Alias</td>
@@ -20274,10 +20344,24 @@
 </tr>
 
 <tr>
+<td>Comic Book Fever: A Celebration Of Comics 1976-1986</td>
+<td>2016</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comic Book History Of Comics</td>
 <td>2012</td>
 <td>IDW</td>
 <td><a href="ComicBookHistoryOfComics/ComicBookHistoryOfComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Book Implosion: An Oral History of DC Comics Circa 1978</td>
+<td>2018</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25934,6 +26018,13 @@
 </tr>
 
 <tr>
+<td>Dick Giordano: Changing Comics, One Day At A Time</td>
+<td>2003</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dick Tracy</td>
 <td>1931</td>
 <td>Tribune</td>
@@ -26701,6 +26792,13 @@
 <td>1985</td>
 <td>Eclipse</td>
 <td><a href="DocStearnMrMonster/DocStearnMrMonster.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Doc Stearn...Mr. Monster His Books Of Forbidden Knowledge</td>
+<td>2001</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28073,6 +28171,13 @@
 <td>1994</td>
 <td>Sirius</td>
 <td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Draw!</td>
+<td>2001</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43695,6 +43800,20 @@
 </tr>
 
 <tr>
+<td>Jack Kirby Collector</td>
+<td>1994</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jack Kirby's Dingbat Love</td>
+<td>2020</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jack Kirby's Galactic Bounty Hunters</td>
 <td>2006</td>
 <td>Icon</td>
@@ -47705,6 +47824,13 @@
 </tr>
 
 <tr>
+<td>Krypton Companion</td>
+<td>2006</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kull</td>
 <td>1929</td>
 <td>Rual Publishing</td>
@@ -50873,6 +50999,13 @@
 <td>1914</td>
 <td>Creator</td>
 <td><a href="MacRaboy/MacRaboy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mac Raboy: Master Of The Comics</td>
+<td>2019</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63945,6 +64078,13 @@
 </tr>
 
 <tr>
+<td>Quality Companion</td>
+<td>2011</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Quantum And Woody</td>
 <td>2013</td>
 <td>Valiant</td>
@@ -65124,6 +65264,13 @@
 <td>1917</td>
 <td>Creator</td>
 <td><a href="ReedCrandall/ReedCrandall.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Reed Crandall: Illustrator Of The Comics</td>
+<td>2017</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67057,6 +67204,13 @@
 <td>2017</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rough Stuff</td>
+<td>2006</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70378,6 +70532,13 @@
 <td>1983</td>
 <td>PC</td>
 <td><a href="Silverstar/Silverstar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Silver Star: Graphite Edition</td>
+<td>2006</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -74458,6 +74619,13 @@
 <td>2009</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Streetwise</td>
+<td>2000</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81995,6 +82163,13 @@
 </tr>
 
 <tr>
+<td>Warren Companion</td>
+<td>2001</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warren Ellis</td>
 <td>1968</td>
 <td>Creator</td>
@@ -84210,6 +84385,13 @@
 </tr>
 
 <tr>
+<td>World Of TwoMorrows</td>
+<td>2020</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
+</tr>
+
+<tr>
 <td>World Of Warcraft</td>
 <td>2008</td>
 <td>Wildstorm</td>
@@ -84655,6 +84837,13 @@
 <td>2015</td>
 <td>Black Mask</td>
 <td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Xal-Kor The Human Cat</td>
+<td>2002</td>
+<td>TwoMorrows</td>
+<td><a href="TwoMorrows/TwoMorrows.html">Details</a></td>
 </tr>
 
 <tr>
