--- a/Cerebus/Cerebus.html
+++ b/Cerebus/Cerebus.html
@@ -39,6 +39,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Cerebus18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Cerebus19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Cerebus20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cerebus21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -51,6 +52,8 @@ The comic began as a parody of sword and sorcery comics, but explored a variety 
 Cerebus has been rated to be one the greatest characters in comics history. Wizard rated him as the 63rd greatest comic book character, while Empire rated him as the 38th greatest comic book character, describing him as a character born of bizarre brilliance. IGN placed Cerebus as the 91st greatest comic book hero of all time, stating that a few names hold as much sway in the independent comics scene as Cerebus and that Cerebus' mark on the industry will be everlasting.
 </p><p>
 Starting with the "High Society" storyline, the series became divided into self-contained "novels", which form parts of the overall story. The ten "novels" of the series have been collected in 16 books, known as "Cerebus phonebooks" for their resemblance, by way of their thickness, to telephone directories. At a time when the series was about 70% completed, celebrated comic book writer Alan Moore wrote, "Cerebus, as if I need to say so, is still to comic books what Hydrogen is to the Periodic Table."
+</p><p>
+<a href="Cerebus21.jpg">Cerebus Guide To Self Publishing</a> The first edition of this work by the pioneer of comics self-publishing, Dave Sim, this was for years also the ONLY guide to the process. Sim details the creative and personal challenges one must face when undertaking this risky endeavor, and offers his iconoclastic opinions on the direct market as it existed in the late 1990s. Printed in standard comics format, but interior is text only, with a few spot illustrations. Cover by Sim. 
 </p><p>
 Cerebus Phonebooks:
 <li>Cerebus (issues #1–25)
