--- a/index.html
+++ b/index.html
@@ -13047,6 +13047,13 @@
 </tr>
 
 <tr>
+<td>Blackball Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="Blackball/Blackball.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blackbeard Legacy</td>
 <td>2006</td>
 <td>Alias</td>
@@ -18135,6 +18142,13 @@
 </tr>
 
 <tr>
+<td>Cerebus Guide To Self Publishing</td>
+<td>1997</td>
+<td>Aardvark-Vanaheim</td>
+<td><a href="Cerebus/Cerebus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ceres Celestial Legend</td>
 <td>2001</td>
 <td>Viz</td>
@@ -22244,6 +22258,13 @@
 <td>2000</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crossover</td>
+<td>2020</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32683,6 +32704,13 @@
 <td>2017</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fiction Illustrated</td>
+<td>1976</td>
+<td>Pyramid</td>
+<td><a href="FictionIllustrated/FictionIllustrated.html">Details</a>
 </tr>
 
 <tr>
@@ -58242,6 +58270,13 @@
 <td>2007</td>
 <td>Marvel</td>
 <td><a href="NewUniversal/NewUniversal.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New Media Publishing</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="NewMedia/NewMedia.html">Details</a></td>
 </tr>
 
 <tr>
